--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
-<title>
-    XillzyProject
-</title>
-<link rel="stylesheet" href="style.css" />
+
+<head>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>
+        XillzyProject
+    </title>
+    <link rel="stylesheet" href="style.css" />
+</head>
 
 <body>
     <div class="head">
